tests/baselines/reference/unionTypeLiterals.errors.txt
tests/cases/conformance/types/specifyingTypes/typeLiterals/unionTypeLiterals.ts(11,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'unionOfFunctionType' must be of type '(() => 文字) | (() => 数字)', but here has type '() => 文字 | 数字'.
tests/cases/conformance/types/specifyingTypes/typeLiterals/unionTypeLiterals.ts(15,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'unionOfConstructorType' must be of type '(新建 () => 文字) | (新建 () => 数字)', but here has type '新建 () => 文字 | 数字'.


==== tests/cases/conformance/types/specifyingTypes/typeLiterals/unionTypeLiterals.ts (2 errors) ====
    // basic valid forms of union literals
    
    var simpleUnion: string | number;
    var unionOfUnion: string | number | boolean;
    
    var arrayOfUnions: (string | number)[];
    var arrayOfUnions: Array<string | number>;
    
    var unionOfFunctionType: (() => string) | (() => number);
    var unionOfFunctionType: { (): string } | { (): number };
    var unionOfFunctionType: () => string | number;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'unionOfFunctionType' must be of type '(() => 文字) | (() => 数字)', but here has type '() => 文字 | 数字'.
    
    var unionOfConstructorType: (new () => string) | (new () => number);
    var unionOfConstructorType: { new (): string } | { new (): number };
    var unionOfConstructorType: new () => string | number;
        ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'unionOfConstructorType' must be of type '(新建 () => 文字) | (新建 () => 数字)', but here has type '新建 () => 文字 | 数字'.